# AutomatiQ

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  VISION.md  pyproject.toml  requirements.txt
.github/workflows/: test.yaml
__deprecated__/: schema.py  test_schema.py
src/automatiq/: __main__.py  bin_manager.py  config.py  events.py  main.py
src/automatiq/cli/: automatiq_banner.py  callbacks.py  console.py  orchestrator.py
src/automatiq/cli/data/: gol_frames.json  gol_frames_aq.json  gol_frames_q.json
src/automatiq/core/: agent.py  bin_manager.py  cancel_standard.py  config.py  events.py  guardrails.py  history.py  key_checker.py  llm.py  main.py  prompt.py  prompts.py  schema.py  tools.py
src/automatiq/core/ipython_sandbox/: __init__.py  sandbox.py  utils.py  worker.py
src/automatiq/core/recorder/: __init__.py  ai_analyzer.py  blocklist_db.py  browser_agent.py  data_compressor.py  video_recorder.py
src/automatiq/core/recorder/cdp/: __init__.py  helpers.py  network.py  targets.py  websockets.py
src/automatiq/core/recorder/compile/: __init__.py  actions.py  network.py  serializers.py  websockets.py  workspace.py
src/automatiq/core/recorder/js/: telemetry.js  visuals.js
tests/core/: test_events.py  test_main_agent.py
tests/core/recorder/: conftest.py  test_cdp_handlers.py  test_compile_network.py  test_compile_websockets.py  test_compile_workspace.py  test_proxy.py  test_serializers.py
tests/core/sandbox/: conftest.py  test_benchmark.py  test_cancellation.py  test_execution.py
