[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automatiq"
dynamic = ["version"]
description = "Record browser sessions and reverse-engineer them into automation scripts."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Kanishq Vijay", email = "stonesteel27@gmail.com" },
]
keywords = ["automation", "data-extraction", "browser-automation", "llm", "agent", "recording", "reverse-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "litellm~=1.81.13",
    "pydantic~=2.12.5",
    "pydantic-pick~=0.2.0",
    "python-dotenv~=1.2.1",
    "pyyaml~=6.0.3",
    "rich>=13.0.0",
    "zendriver~=0.15.2",
    "mss~=10.1.0",
    "numpy~=2.4.0",
    "imageio-ffmpeg~=0.6.0",
    "requests~=2.32.5",    "curl_cffi~=0.14.0",
    "beautifulsoup4~=4.14.3",
    "magika~=1.0.1",
    "ipython~=9.10.0",
    "blinker>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/StoneSteel27/AutomatiQ"
Repository = "https://github.com/StoneSteel27/AutomatiQ"
Issues = "https://github.com/StoneSteel27/AutomatiQ/issues"

[dependency-groups]
dev = [
    "pre-commit>=3.6.0",
    "ruff>=0.3.0",
    "build>=1.5.0",
    "twine>=5.0.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
automatiq = "automatiq.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "automatiq.core.config.VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["automatiq*"]

[tool.setuptools.package-data]
"automatiq" = ["cli/data/*.json", "core/recorder/js/*.js"]

[tool.ruff]
line-length = 121
target-version = "py311"

[tool.ruff.lint]
# E: pycodestyle, F: Pyflakes, I: isort, B: flake8-bugbear, UP: pyupgrade
select = ["E", "F", "I", "B", "UP"]
ignore = ["UP042"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
